--- a/sass/utilities/_animation.scss
+++ b/sass/utilities/_animation.scss
@@ -54,3 +54,21 @@
     opacity: 100%;
   }
 }
+@keyframes rise {
+  from {
+    margin-top: 90%;
+    opacity: 0;
+  }
+  to {
+    margin-top: 0%;
+    opacity: 1;
+  }
+}
+@keyframes selected {
+  0% {
+    rotate: 0;
+  }
+  100% {
+    rotate: 360deg;
+  }
+}
