--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,7 +15,7 @@
   width: 200px;
 }
 
-.button {
+button {
   width: 200px;
   height: 50px;
   border-radius: 25px;
@@ -29,7 +29,7 @@
   background-size: 300% 100%;
   transition: all 0.4s ease-in-out;
 }
-.button:hover {
+button:hover {
   background-position: 100% 0;
   transition: all 0.4s ease-in-out;
 }
@@ -405,24 +405,6 @@ footer ul li a i {
   }
   100% {
     opacity: 100%;
-  }
-}
-@keyframes rise {
-  from {
-    margin-top: 90%;
-    opacity: 0;
-  }
-  to {
-    margin-top: 0%;
-    opacity: 1;
-  }
-}
-@keyframes selected {
-  0% {
-    rotate: 0;
-  }
-  100% {
-    rotate: 360deg;
   }
 }
 * {
