--- a/css/page.css
+++ b/css/page.css
@@ -42,7 +42,12 @@ header a:hover {
   border: none;
   box-shadow: 0px 10px 10px lightgrey;
   border-radius: 20px;
+  transition: ease-in-out 0.3s;
   overflow: hidden;
+}
+.card:hover {
+  transform: scale(1.02);
+  z-index: 1;
 }
 .card .cardContent {
   width: 100%;
@@ -140,6 +145,76 @@ footer ul li a i {
   width: 20px;
 }
 
+@keyframes circle {
+  0% {
+    top: 60px;
+    height: 5px;
+    border-radius: 50px 50px 25px 25px;
+    transform: scaleX(1.7);
+  }
+  40% {
+    height: 20px;
+    border-radius: 50%;
+    transform: scaleX(1);
+  }
+  100% {
+    top: 0%;
+  }
+}
+@keyframes txt {
+  0% {
+    content: "LOADING";
+  }
+  40% {
+    content: "LOADING.";
+  }
+  60% {
+    content: "LOADING..";
+  }
+  100% {
+    content: "LOADING...";
+  }
+}
+@keyframes loaded {
+  0% {
+    opacity: 100%;
+  }
+  80% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 0%;
+  }
+}
+@keyframes contentLoaded {
+  0% {
+    opacity: 0%;
+  }
+  70% {
+    opacity: 1%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+@keyframes rise {
+  from {
+    margin-top: 90%;
+    opacity: 0;
+  }
+  to {
+    margin-top: 0%;
+    opacity: 1;
+  }
+}
+@keyframes selected {
+  0% {
+    rotate: 0;
+  }
+  100% {
+    rotate: 360deg;
+  }
+}
 * p,
 * h2,
 * h3 {
@@ -149,6 +224,12 @@ footer ul li a i {
 * h2 {
   font-size: 20px;
   font-weight: 400;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  position: relative;
 }
 
 main {
