--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -3,6 +3,11 @@ a {
   text-decoration: none;
   position: relative;
   padding: 3%;
+  transition: ease-in-out 0.3s;
+  &:hover {
+    transform: scale(1.02);
+    z-index: 1;
+  }
 
   span {
     position: absolute;
@@ -13,6 +18,7 @@ a {
     margin-top: 3%;
     text-align: center;
     color: #2ba083;
+    z-index: 5;
     p {
       margin: 0;
       padding: 5%;
@@ -24,10 +30,7 @@ a {
 
     box-shadow: 0px 10px 10px lightgrey;
     border-radius: 20px;
-    &:hover {
-      transition: ease 0.3s;
-      box-shadow: 0px 15px 10px #f5edff;
-    }
+
     img {
       width: 100%;
       height: 250px;
@@ -46,6 +49,9 @@ a {
         display: flex;
         flex-direction: column;
         color: black;
+        &:hover {
+          color: #9356dc;
+        }
 
         .title {
           font-weight: bold;
@@ -74,6 +80,7 @@ a {
 @media (max-width: 600px) {
   a {
     width: 100%;
+    padding: 0;
     span {
       right: 5%;
       top: 5%;
