--- a/sass/components/_page-card.scss
+++ b/sass/components/_page-card.scss
@@ -10,6 +10,12 @@
   border: none;
   box-shadow: 0px 10px 10px lightgrey;
   border-radius: 20px;
+  transition: ease-in-out 0.3s;
+
+  &:hover {
+    transform: scale(1.02);
+    z-index: 1;
+  }
 
   overflow: hidden;
   .cardContent {
