--- a/sass/layout/_step-holder.scss
+++ b/sass/layout/_step-holder.scss
@@ -3,11 +3,12 @@
 .stepHolder {
   display: flex;
   flex-flow: column;
+
   .stepContainer {
     display: flex;
     width: 100%;
     flex-flow: row wrap;
     justify-content: space-evenly;
-    padding: 10px;
+    margin-bottom: 20px;
   }
 }
