--- a/sass/page.scss
+++ b/sass/page.scss
@@ -3,6 +3,7 @@
 @use "./layout/page-card-holder";
 @use "./components/button";
 @use "./layout/footer";
+@use "./utilities/animation";
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
@@ -18,6 +19,12 @@
     font-size: 20px;
     font-weight: 400;
   }
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  position: relative;
 }
 
 main {
