--- a/css/main.css
+++ b/css/main.css
@@ -94,9 +94,6 @@
   border-radius: 50px;
   width: 20px;
   height: 20px;
-}
-.step span p {
-  margin: 0;
   font-size: 12px;
 }
 .step .stepContent {
@@ -303,6 +300,7 @@ footer ul li p {
 footer ul li a {
   color: white;
   text-decoration: none;
+  padding: 0;
 }
 footer ul li a:hover {
   color: #9356dc;
@@ -433,10 +431,10 @@ footer ul li a i {
 }
 @keyframes selected {
   0% {
-    rotate: 0;
+    transform: rotate(0);
   }
   100% {
-    rotate: 360deg;
+    transform: rotate(360deg);
   }
 }
 * {
