--- a/css/page.css
+++ b/css/page.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 header {
   height: 50px;
   display: flex;
@@ -137,6 +139,7 @@ footer ul li p {
 footer ul li a {
   color: white;
   text-decoration: none;
+  padding: 0;
 }
 footer ul li a:hover {
   color: #9356dc;
@@ -209,12 +212,17 @@ footer ul li a i {
 }
 @keyframes selected {
   0% {
-    rotate: 0;
+    transform: rotate(0);
   }
   100% {
-    rotate: 360deg;
+    transform: rotate(360deg);
   }
 }
+* {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+}
+
 * p,
 * h2,
 * h3 {
@@ -251,6 +259,7 @@ main .content .head {
   gap: 5%;
   padding: 3% 3% 0 3%;
   justify-content: space-between;
+  align-items: center;
 }
 main .content .head h1 {
   font-size: 30px;
@@ -277,11 +286,15 @@ main .content section {
 }
 main .content section span {
   border-bottom: #99e2d0 2px solid;
-  width: 60px;
+  width: 40px;
   padding-bottom: 5px;
 }
 main .content section .title {
   width: 100%;
+}
+main .content section a {
+  color: black;
+  text-decoration: none;
 }
 main .commander {
   display: flex;
@@ -302,12 +315,8 @@ main .commander {
   html body main .content span {
     display: flex;
     align-items: center;
-    width: 100%;
     justify-content: space-evenly;
     padding: 5% 0;
-  }
-  html body main .content span h1 {
-    font-size: 27px;
   }
   html body main .content section {
     align-items: flex-start;
@@ -326,16 +335,6 @@ main .commander {
   }
 }
 @media (max-width: 768px) {
-  html body main .content span {
-    display: flex;
-    align-items: center;
-    width: 60px;
-    justify-content: space-evenly;
-    padding: 5% 0;
-  }
-  html body main .content span h1 {
-    font-size: 20px;
-  }
   html body main .content section {
     align-items: flex-start;
     flex-flow: column;
