--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -15,6 +15,7 @@ footer {
       a {
         color: white;
         text-decoration: none;
+        padding: 0;
         &:hover {
           color: #9356dc;
         }
