--- a/sass/utilities/_animation.scss
+++ b/sass/utilities/_animation.scss
@@ -66,9 +66,9 @@
 }
 @keyframes selected {
   0% {
-    rotate: 0;
+    transform: rotate(0);
   }
   100% {
-    rotate: 360deg;
+    transform: rotate(360deg);
   }
 }
