--- a/css/page.css
+++ b/css/page.css
@@ -53,19 +53,33 @@ header a:hover {
 }
 .card .cardContent {
   width: 100%;
-  padding: 3%;
+  padding: 15px;
   z-index: 2;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column;
   justify-content: space-between;
   transition: 0.5s;
 }
 .card .cardContent .title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   width: 100%;
   margin-top: 0;
 }
+.card .cardContent .subContent {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row;
+}
 .card .cardContent .price {
   justify-self: flex-end;
+  padding-left: 10px;
+}
+.card .cardContent .desc {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .card .selected {
   width: 0;
@@ -83,14 +97,21 @@ header a:hover {
 }
 .card:hover .cardContent {
   width: 80%;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .card:hover .selected {
-  width: 14%;
+  width: 20%;
 }
 .card:hover .selected i {
   animation: selected 1s;
 }
 
+@media (max-width: 400px) {
+  .desc {
+    width: 250px;
+  }
+}
 .cardHolder {
   height: auto;
   display: flex;
@@ -119,7 +140,6 @@ header a:hover {
 }
 .button:hover {
   background-position: 100% 0;
-  transition: all 0.4s ease-in-out;
 }
 
 footer {
@@ -218,11 +238,46 @@ footer ul li a i {
     transform: rotate(360deg);
   }
 }
+@keyframes like {
+  0% {
+    background: #f0f0f0;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: none;
+  }
+  30% {
+    background: -webkit-linear-gradient(90deg, #ff79da, #f0f0f0, #f0f0f0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: none;
+  }
+  50% {
+    background: -webkit-linear-gradient(90deg, #ff79da, #f0f0f0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: none;
+  }
+  70% {
+    background: -webkit-linear-gradient(90deg, #ff79da, #9356dc, #f0f0f0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: none;
+  }
+  100% {
+    background: -webkit-linear-gradient(90deg, #ff79da, #9356dc);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 1px #f0f0f0;
+  }
+}
 * {
   font-family: "Roboto", sans-serif;
   font-style: normal;
 }
 
+* {
+  text-overflow: ellipsis;
+}
 * p,
 * h2,
 * h3 {
@@ -250,6 +305,7 @@ main .content {
   background-color: #f0f0f0;
   margin-top: -70px;
   position: relative;
+  padding: 3%;
   display: flex;
   flex-flow: row wrap;
 }
@@ -268,18 +324,21 @@ main .content .head h1 {
   margin: 0;
 }
 main .content .head i {
-  color: #353535;
   font-size: 30px;
-}
-main .content .head i:hover {
+  -webkit-text-stroke: 1px black;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-weight: bold;
   line-height: 1;
-  color: #9356dc;
+  opacity: 1;
+}
+main .content .head i:hover {
+  animation: like 0.1s;
+  animation-fill-mode: forwards;
 }
 main .content section {
   height: auto;
   width: 27%;
-  padding: 3%;
   display: flex;
   flex-flow: column;
   animation: rise 3s;
@@ -321,7 +380,6 @@ main .commander {
   html body main .content section {
     align-items: flex-start;
     flex-flow: row wrap;
-    padding: 3% 3% 0 3%;
     width: 44%;
   }
   html body main .content section span {
