--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -17,12 +17,10 @@ a {
     width: 100px;
     margin-top: 3%;
     text-align: center;
-    color: #2ba083;
+    color: #0d8f6f;
     z-index: 5;
-    p {
-      margin: 0;
-      padding: 5%;
-    }
+    border-radius: 4px;
+    padding: 7px 1px;
   }
   .card {
     display: flex;
@@ -61,11 +59,16 @@ a {
         }
       }
       i {
-        color: #353535;
+        -webkit-text-stroke: 1px black;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: bold;
+        line-height: 1;
+        opacity: 1;
+
         &:hover {
-          font-weight: bold;
-          line-height: 1;
-          color: #9356dc;
+          animation: like 0.1s;
+          animation-fill-mode: forwards;
         }
       }
     }
