--- a/css/main.css
+++ b/css/main.css
@@ -20,16 +20,15 @@
   border-radius: 25px;
   border: none;
   color: white;
-  box-shadow: 0px 7px 10px lightgrey;
+  box-shadow: 0px 7px 10px rgb(184, 184, 184);
   font-size: 13px;
   font-weight: 800;
-  background-image: linear-gradient(to right, #ff79da, #9356dc, #ff79da);
+  background-image: linear-gradient(#ff79da, #9356dc);
   border: none;
-  background-size: 300% 100%;
-  transition: all 0.4s ease-in-out;
 }
 .button:hover {
-  background-position: 100% 0;
+  animation: 0.1s btn-hover ease;
+  animation-fill-mode: forwards;
 }
 
 .banner {
@@ -468,6 +467,20 @@ footer ul li a i {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 1px #f0f0f0;
+  }
+}
+@keyframes btn-hover {
+  0% {
+    background-image: linear-gradient(#ff79da, #9356dc);
+    box-shadow: 0px 7px 10px rgb(180, 178, 178);
+  }
+  50% {
+    background-image: linear-gradient(#ff79da, #ff79da, #9356dc);
+    box-shadow: 0px 7px 15px rgb(176, 176, 176);
+  }
+  100% {
+    background-image: linear-gradient(#ff79da, #ff79da);
+    box-shadow: 0px 7px 20px rgb(145, 145, 145);
   }
 }
 * {
