--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,14 +4,14 @@
   border-radius: 25px;
   border: none;
   color: white;
-  box-shadow: 0px 7px 10px lightgrey;
+  box-shadow: 0px 7px 10px rgb(184, 184, 184);
   font-size: 13px;
   font-weight: 800;
-  background-image: linear-gradient(to right, #ff79da, #9356dc, #ff79da);
+  background-image: linear-gradient(#ff79da, #9356dc);
   border: none;
-  background-size: 300% 100%;
-  transition: all 0.4s ease-in-out;
+
   &:hover {
-    background-position: 100% 0;
+    animation: 0.1s btn-hover ease;
+    animation-fill-mode: forwards;
   }
 }
