--- a/sass/page.scss
+++ b/sass/page.scss
@@ -42,11 +42,13 @@ main {
     display: flex;
     flex-flow: row wrap;
 
+    justify-content: space-between;
+
     .head {
       display: flex;
       width: 100%;
       gap: 5%;
-      padding: 3% 3% 0 3%;
+      padding: 3%;
       justify-content: space-between;
       align-items: center;
       h1 {
@@ -78,6 +80,7 @@ main {
       display: flex;
       flex-flow: column;
       animation: rise 3s;
+      padding: 5% 0;
       span {
         border-bottom: #99e2d0 2px solid;
         width: 40px;
@@ -107,7 +110,7 @@ main {
       main {
         .content {
           flex-flow: row wrap;
-          justify-content: flex-start;
+          justify-content: space-between;
           .head {
             padding: 5% 5% 0 5%;
           }
