--- a/sass/utilities/_animation.scss
+++ b/sass/utilities/_animation.scss
@@ -104,3 +104,17 @@
     -webkit-text-stroke: 1px #f0f0f0;
   }
 }
+@keyframes btn-hover {
+  0% {
+    background-image: linear-gradient(#ff79da, #9356dc);
+    box-shadow: 0px 7px 10px rgb(180, 178, 178);
+  }
+  50% {
+    background-image: linear-gradient(#ff79da, #ff79da, #9356dc);
+    box-shadow: 0px 7px 15px rgb(176, 176, 176);
+  }
+  100% {
+    background-image: linear-gradient(#ff79da, #ff79da);
+    box-shadow: 0px 7px 20px rgb(145, 145, 145);
+  }
+}
